--- a/layout/layout5_01.html
+++ b/layout/layout5_01.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout5</title>
+    <title>layout5-01</title>
     <style>
         * {
             margin: 0;
@@ -27,7 +27,7 @@
         }
         #main {
             width: 100%;
-            height: 720px;
+            height: 780px;
             background-color: #886F65;
         }
         #footer {
@@ -39,54 +39,31 @@
             width: 1200px;
             height: inherit;
             margin: 0 auto;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: rgba(0,0,0,0.3);
             overflow: hidden;
         }
-        .header {
-            width: 1200px;
-            height: 100px;
-            background-color: #D5CCC9;
-            float: left;
-        }
-        .nav {
-            width: 1200px;
-            height: 100px;
-            background-color: #9D8980;
-            float: left;
-        }
-        .main {
-            width: 1200px;
-            height: 780px;
-            background-color: #fff;
-        }
-        .sb1 {
-            width: 1200px;
+        .contents .cont1 {
+            width: 100%;
             height: 100px;
             background-color: #74574A;
             float: left;
         }
-        .sb2 {
-            width: 1200px;
+        .contents .cont2 {
+            width: 100%;
             height: 200px;
             background-color: #684D43;
             float: left;
         }
-        .sb3 {
-            width: 600px;
+        .contents .cont3 {
+            width: 50%;
             height: 480px;
             background-color: #594139;
             float: left;
         }
-        .sb4 {
-            width: 600px;
+        .contents .cont4 {
+            width: 50%;
             height: 480px;
             background-color: #4A352F;
-            float: left;
-        }
-        .footer {
-            width: 1200px;
-            height: 100px;
-            background-color: #3E2723;
             float: left;
         }
     </style>
@@ -94,29 +71,21 @@
 <body>
     <div id="wrap">
         <div id="header">
-            <div class="container">
-                <div class="header"></div>
-            </div>
+            <div class="container"></div>
         </div>
         <div id="nav">
-            <div class="container">
-                <div class="nav"></div>
-            </div>
+            <div class="container"></div>
         </div>
         <div id="main">
-            <div class="container">
-                <div class="main">
-                    <div class="sb1"></div>
-                    <div class="sb2"></div>
-                    <div class="sb3"></div>
-                    <div class="sb4"></div>
-                </div>
+            <div class="contents container">
+                <div class="cont1"></div>
+                <div class="cont2"></div>
+                <div class="cont3"></div>
+                <div class="cont4"></div>
             </div>
         </div>
         <div id="footer">
-            <div class="container">
-                <div class="footer"></div>
-            </div>
+            <div class="container"></div>
         </div>
     </div>
 </body>
