--- a/layout/layout5_03.html
+++ b/layout/layout5_03.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout5</title>
+    <title>layout5-03</title>
+</head>
     <style>
         * {
             margin: 0;
-            height: 0;
         }
         #wrap {
             width: 100%;
-            margin: 0 auto;
-            background-color: #000;
         }
         #header {
             width: 100%;
@@ -27,7 +25,7 @@
         }
         #main {
             width: 100%;
-            height: 720px;
+            height: 780px;
             background-color: #886F65;
         }
         #footer {
@@ -38,86 +36,61 @@
         .container {
             width: 1200px;
             height: inherit;
+            background-color: rgba(0,0,0,0.3);
             margin: 0 auto;
-            background-color: rgba(0, 0, 0, 0.3);
-            overflow: hidden;
         }
-        .header {
-            width: 1200px;
-            height: 100px;
-            background-color: #D5CCC9;
-            float: left;
+        .left {
+            display: flex;
+            flex-wrap: wrap;
         }
-        .nav {
-            width: 1200px;
-            height: 100px;
-            background-color: #9D8980;
-            float: left;
-        }
-        .main {
-            width: 1200px;
-            height: 780px;
-            background-color: #fff;
-        }
-        .sb1 {
-            width: 1200px;
+        .contents .cont1 {
+            width: 100%;
             height: 100px;
             background-color: #74574A;
-            float: left;
         }
-        .sb2 {
-            width: 1200px;
+        .right {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .contents .cont2 {
+            width: 100%;
             height: 200px;
             background-color: #684D43;
-            float: left;
         }
-        .sb3 {
-            width: 600px;
+        .contents .cont3 {
+            width: 50%;
             height: 480px;
             background-color: #594139;
-            float: left;
         }
-        .sb4 {
-            width: 600px;
+        .contents .cont4 {
+            width: 50%;
             height: 480px;
             background-color: #4A352F;
-            float: left;
-        }
-        .footer {
-            width: 1200px;
-            height: 100px;
-            background-color: #3E2723;
-            float: left;
         }
     </style>
-</head>
 <body>
     <div id="wrap">
-        <div id="header">
-            <div class="container">
-                <div class="header"></div>
-            </div>
-        </div>
-        <div id="nav">
-            <div class="container">
-                <div class="nav"></div>
-            </div>
-        </div>
-        <div id="main">
-            <div class="container">
-                <div class="main">
-                    <div class="sb1"></div>
-                    <div class="sb2"></div>
-                    <div class="sb3"></div>
-                    <div class="sb4"></div>
+        <header id="header">
+            <div class="container"></div>
+        </header>
+        <nav id="nav">
+            <div class="container"></div>
+        </nav>
+        <main id="main">
+            <div class="contents container">
+                <div class="left">
+                    <div class="cont1"></div>
+                </div>
+                <div class="right">
+                    <div class="cont2"></div>
+                    <div class="cont3"></div>
+                    <div class="cont4"></div>
                 </div>
             </div>
-        </div>
-        <div id="footer">
-            <div class="container">
-                <div class="footer"></div>
-            </div>
-        </div>
+        </main>
+        <footer id="footer">
+            <div class="container"></div>
+        </footer>
     </div>
 </body>
 </html>
