--- a/layout/layout05_04.html
+++ b/layout/layout05_04.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout5</title>
+    <title>layout5-04</title>
 </head>
     <style>
         * {
@@ -66,6 +66,81 @@
             width: 50%;
             height: 480px;
             background-color: #4A352F;
+        }
+        @media (max-width: 1220px) {
+            .container {
+                width: 96%;
+            }
+            .contents {
+                display: flex;
+            }
+            .contents .left {
+                width: 30%;
+            }
+            .contents .left .cont1 {
+                width: 100%;
+                height: 780px;
+            }
+            .contents .right {
+                width: 70%;
+                height: 780px;
+            }
+            .contents .right .cont2 {
+                width: 100%;
+                height: 390px;
+            }
+            .contents .right .cont3 {
+                width: 50%;
+                height: 390px;
+            }
+            .contents .right .cont4 {
+                width: 50%;
+                height: 390px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                width: 100%;
+            }
+            .contents .right .cont2 {
+                width: 100%;
+                height: 260px;
+            }
+            .contents .right .cont3 {
+                width: 100%;
+                height: 260px;
+            }
+            .contents .right .cont4 {
+                width: 100%;
+                height: 260px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .contents {
+                flex-wrap: wrap;
+            }
+            .contents .left {
+                width: 100%;
+                height: 150px;
+            }
+            .contents .left .cont1 {
+                height: 150px;
+            }
+            .contents .right {
+                width: 100%;
+                height: 630px;
+            }
+            .contents .right .cont2 {
+                height: 210px;
+            }
+            .contents .right .cont3 {
+                height: 210px;
+            }
+            .contents .right .cont4 {
+                height: 210px;
+            }
         }
     </style>
 <body>
