--- a/layout/layout05_05.html
+++ b/layout/layout05_05.html
@@ -4,34 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout5-01</title>
+    <title>layout5-05</title>
     <style>
         * {
             margin: 0;
-            height: 0;
         }
-        #wrap {
-            width: 100%;
-            margin: 0 auto;
-            background-color: #000;
-        }
+        #wrap {}
         #header {
-            width: 100%;
             height: 100px;
             background-color: #EEEBE9;
         }
         #nav {
-            width: 100%;
             height: 100px;
             background-color: #B9AAA5;
         }
         #main {
-            width: 100%;
             height: 780px;
             background-color: #886F65;
         }
         #footer {
-            width: 100%;
             height: 100px;
             background-color: #4E342E;
         }
@@ -40,53 +31,54 @@
             height: inherit;
             margin: 0 auto;
             background-color: rgba(0,0,0,0.3);
-            overflow: hidden;
+        }
+        .contents {
+            display: grid;
+            grid-template-areas: 
+                "cont1 cont1"
+                "cont2 cont2"
+                "cont3 cont4"
+            ;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 100px 200px 480px;
         }
         .contents .cont1 {
-            width: 100%;
-            height: 100px;
             background-color: #74574A;
-            float: left;
+            grid-area: cont1;
         }
         .contents .cont2 {
-            width: 100%;
-            height: 200px;
             background-color: #684D43;
-            float: left;
+            grid-area: cont2;
         }
         .contents .cont3 {
-            width: 50%;
-            height: 480px;
             background-color: #594139;
-            float: left;
+            grid-area: cont3;
         }
         .contents .cont4 {
-            width: 50%;
-            height: 480px;
             background-color: #4A352F;
-            float: left;
+            grid-area: cont4;
         }
     </style>
 </head>
 <body>
     <div id="wrap">
-        <div id="header">
+        <header id="header">
             <div class="container"></div>
-        </div>
-        <div id="nav">
+        </header>
+        <nav id="nav">
             <div class="container"></div>
-        </div>
-        <div id="main">
+        </nav>
+        <main id="main">
             <div class="contents container">
                 <div class="cont1"></div>
                 <div class="cont2"></div>
                 <div class="cont3"></div>
                 <div class="cont4"></div>
             </div>
-        </div>
-        <div id="footer">
+        </main>
+        <footer id="footer">
             <div class="container"></div>
-        </div>
+        </footer>
     </div>
 </body>
 </html>
