--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -113,15 +113,46 @@ body {
     margin: 200px 20px;
     border: 4px solid var(--brown);
     background-color: var(--bgSub);
-    padding: 80px;
+    padding: 100px 80px 80px 80px;
+    position: relative;
+    border-radius: 30px;
+    overflow: hidden;
+}
+.main__desc .deco {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%);
+    padding-top: 10px;
+    white-space: nowrap;
+    width: 89%;
+    overflow: hidden;
+}
+.main__desc .deco span {
+    width: 30px;
+    height: 30px;
+    border: 10px solid var(--brown);
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    background-color: var(--bgMain);
+    margin: 0 1%;
+    position: relative;
+}
+.main__desc .deco span::after {
+    content: '';
+    width: 10px;
+    height: 13px;
+    background-color: var(--brown);
+    position: absolute;
+    left: 0;
+    top: -20px;
 }
 .main__desc .title {
-    display: flex;
-    justify-content: space-between;
     margin-bottom: 2rem;
 }
 .main__desc .title h2 {
-    width: 25%;
+    display: inline-block;
     border: 4px solid var(--brown);
     font-size: 2rem;
     padding: 0.4rem 1rem 0.3rem 80px;
@@ -143,9 +174,31 @@ body {
 }
 .main__desc .title p {
     padding: 10px;
-    width: 70%;
     font-family: var(--fontSub);
+    line-height: 1.3rem;
     color: var(--brown);
+}
+.main__desc .subTitle {
+
+}
+.main__desc .subTitle ul {
+    overflow: hidden;
+}
+.main__desc .subTitle li {
+    float: left;
+    margin-right: -4px;
+    margin-bottom:-4px;
+}
+.main__desc .subTitle li a {
+    line-height: 0.8rem;
+    font-family: var(--fontDocs);
+    border: 4px solid var(--brown);
+    padding: 0.3em 0.6em;
+    display: inline-block;
+}
+.main__desc .subTitle li.active a {
+    background-color: var(--brown);
+    color: var(--white);
 }
 .main__desc .table {
     border: 3px solid var(--brown);
