--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -84,6 +84,7 @@ body{
 .header_nav .effect li a {
     border-radius: 40px;
 }
+
 /* 메인 샘플 */
 .main_sample {
     margin-top: 40px;
@@ -122,6 +123,32 @@ body{
 .table tr td {
     border: 1px solid #dedede;
     padding: 10px;
+}
+
+/* sample */
+.sample {
+    margin-bottom: 50px;
+}
+.sample .table{
+    margin-bottom: 10px;
+}
+.sample .table table{
+    width: 100%;
+    border: 1px solid #e6e6e6;
+    text-align: center;
+}
+.sample .table table tr th{
+    font-weight: normal;
+    background-color: #f5f5f5;
+    padding: 3px;
+
+}
+.sample .table table tr td{
+    border: 1px solid #e6e6e6;
+    padding: 3px;
+}
+.sample .table table tr td[class*="_P"] {
+    background: #000;
 }
 
 /* 티스토리용 문서*/
