--- a/javascript/assets/css/search.css
+++ b/javascript/assets/css/search.css
@@ -1,3 +1,9 @@
+:root {
+    --htmlColor : #223547;
+    --cssColor : #0e3d2e;
+    --javascriptColor : #130744;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,19 +22,23 @@ a {
     color: #000;
     text-decoration: none;
 }
+li {
+    list-style: none;
+}
 
 /* header */
 #header {}
 #header nav {
-    margin: 10px;
+    margin: 20px;
 }
-#header nav ul li {
+#header nav li {
     display: inline;
+    position: relative;
 }
-#header nav ul li a {
+#header nav li a {
     width: 30px;
     height: 30px;
-    border: 1px solid #223547;
+    border: 1px solid var(--htmlColor);
     border-radius: 50%;
     display: inline-block;
     text-align: center;
@@ -36,8 +46,25 @@ a {
     font-family: "SCoreDream";
 }
 #header nav ul li.active a {
-    background-color: #223547;
+    background-color: var(--htmlColor);
     color: #fff;
+}
+#header nav li .sub {
+    position: absolute;
+    left: 0;
+    top: 35px;
+    width: 400px;
+}
+#header nav li .sub li a {
+    width: auto;
+    background-color: transparent;
+    color: var(--htmColor);
+    border: 0;
+    text-align: left;
+    line-height: 1.2;
+}
+#header nav li .sub li.active a {
+    text-decoration: underline;
 }
 
 /* main */
@@ -47,7 +74,7 @@ a {
 .search__wrap {
     max-width: 1400px;
     margin: 0 auto;
-    border: 3px solid #223547;
+    border: 3px solid var(--htmlColor);
     margin: 10px;
     border-radius: 20px;
     background-color: #f1f3f6;
@@ -61,25 +88,34 @@ a {
 }
 .search__wrap > h1 {
     font-family: 'Tmon';
-    color: #223547;
+    color: var(--htmlColor);
     font-size: 6vw;
     margin-bottom: 10px;
 }
 .search__box {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+}
+.search__box label {
+    position:absolute;
+    clip:rect(0 0 0 0);
+    width:1px;
+    height:1px;
+    margin:-1px;
+    overflow:hidden
 }
 .search__box input{
-    border: 2px solid #223547;
+    border: 2px solid var(--htmlColor);
     padding: 15px 40px;
     width: 70%;
     border-radius: 50px;
     font-size: 20px;
 }
-.search__list {}
 .search__list li {
-    list-style: none;
     text-align: left;
     line-height: 1.7;
+}
+.search__list li.hide {
+    display: none;
 }
 @media (max-width: 600px) {
     .search__wrap {
