--- a/javascript/assets/css/slider.css
+++ b/javascript/assets/css/slider.css
@@ -1,3 +1,9 @@
+/* font */
+@import url('https://webfontworld.github.io/jeju/JejuMyeongjo.css');
+.jeju {
+    font-family: "JejuMyeongjo";
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,4 +13,204 @@
 body {
     width: 100%;
     height: 100vh;
+}
+body.img01 {
+    background: #000 url(../img/slide01.jpg) no-repeat center/ cover;
+}
+body.img02 {
+    background: #000 url(../img/slide02.jpg) no-repeat center/ cover;
+}
+body.img03 {
+    background: #000 url(../img/slide03.jpg) no-repeat center/ cover;
+}
+body.img04 {
+    background: #000 url(../img/slide04.jpg) no-repeat center/ cover;
+}
+body.img05 {
+    background: #000 url(../img/slide05.jpg) no-repeat center/ cover;
+}
+body.img06 {
+    background: #000 url(../img/slide06.jpg) no-repeat center/ cover;
+}
+body.img07 {
+    background: #000 url(../img/slide07.jpg) no-repeat center/ cover;
+}
+body.img08 {
+    background: #000 url(../img/slide08.jpg) no-repeat center/ cover;
+}
+body.img09 {
+    background: #000 url(../img/slide09.jpg) no-repeat center/ cover;
+}
+body.img010 {
+    background: #000 url(../img/slide10.jpg) no-repeat center/ cover;
+}
+body::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(4, 0, 51, 0.336);
+    z-index: -1;
+}
+img {
+    width: 100%;
+    vertical-align: top;
+}
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+/* header */
+#header {
+    color: #fff;
+    padding: 20px;
+}
+#header h1 {
+    display: inline-block;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #fff;
+}
+#header p {
+    margin-bottom: 10px;
+}
+#header li {
+    display: inline-block;
+}
+#header li a {
+    border: 1px solid #fff;
+    border-radius: 50%;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+/* footer */
+#footer .source {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    border: 1px solid #fff;
+    border-radius: 40px;
+    padding: 10px 30px;
+    font-size: 14px;
+}
+
+/* modal__wrap */
+.modal__wrap {}
+.modal__btn {}
+.modal__btn .btn {}
+.modal__cont {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    left: 0;
+    top: 0;
+    overflow-x: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal__box {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    height: 600px;
+    background-color: #fff;
+    border-radius: 0.5rem;
+    background-color: #fff;
+    box-shadow: 0 10px 20px -5px hsl(180deg 0% 10%);
+}
+.modal__box .title {
+    padding-inline: 1rem;
+    background-color: #1b1c2e;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    height: 50px;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+.modal__box .title .dot {
+    width: 15px;
+    height: 15px;
+    background-color: #3b3d63;
+    display: inline-block;
+    border-radius: 50%;
+    position: relative;
+    margin-left: 2rem;
+}
+.modal__box .title .dot::before {
+    content: '';
+    position: absolute;
+    left: 25px;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    background-color: #3b3d63;
+    border-radius: 50%;
+}
+.modal__box .title .dot::after {
+    content: '';
+    position: absolute;
+    right: 25px;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    background-color: #3b3d63;
+    border-radius: 50%;
+}
+.modal__box .title .plus {
+    background: #282936;
+    padding: 0.5rem 0.5rem 0.3rem 0.5rem;
+    border-radius: 0.5rem;
+    color: #7a7d9d;
+}
+.modal__box .title .tabs {
+    display: flex;
+    margin-left: 50px;
+}
+.modal__box .title .tabs > div {
+    color: #7a7d9d;
+    background-color: #282936;
+    padding: 0.35rem 0.8rem 0.25rem 0.8rem;
+    margin-right: 0.5rem;
+    display: flex;
+    align-items: center;
+    border-radius: 0.4rem;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.modal__box .title .tabs > div.active {
+    background-color: rgb(62, 31, 112);
+}
+.modal__box .title .tabs > div em {
+    font-style: normal;
+}
+.modal__box .title .tabs > div .favicon {
+    margin-right: 0.4rem;
+    margin-top: 0.2rem;
+}
+.modal__box .title .tabs > div .close {
+    margin-left: 5rem;
+}
+.modal__box .cont {
+    background-color: #282936;
+    height: 550px;
+    overflow-y: auto;
+    box-sizing: border-box;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+.modal__box .cont > div {
+    display: none;
+}
+.modal__box .cont > div.active {
+    display: block;
 }
