--- a/javascript/assets/css/dracula.css
+++ b/javascript/assets/css/dracula.css
@@ -4,7 +4,7 @@ pre code.hljs {
     padding: 20px;
     font-family: 'SCoreDream';
     line-height: 1.6;
-    margin-bottom: 20px;
+    /* margin-bottosm: 20px; */
     border-radius: 5px;
         }
         code.hljs {
