--- a/javascript/assets/css/slider.css
+++ b/javascript/assets/css/slider.css
@@ -62,7 +62,20 @@ a {
     color: #fff;
     text-decoration: none;
 }
-
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #000;
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(62, 31, 112);
+    border-radius: 30px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(81, 47, 136);
+}
 /* header */
 #header {
     color: #fff;
@@ -103,12 +116,27 @@ a {
 
 /* modal__wrap */
 .modal__wrap {}
-.modal__btn {}
-.modal__btn .btn {}
+.modal__btn {
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    display: inline-block;
+    padding: 10px 20px;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+.modal__btn:hover {
+    background-color: #23243d;
+    color: #fff;
+}
 .modal__cont {
+    display: none;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(20, 20, 20, 0.4);
     position: fixed;
     left: 0;
     top: 0;
@@ -116,7 +144,9 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    transform: scale(0);
 }
+
 .modal__box {
     width: 100%;
     max-width: 800px;
@@ -214,3 +244,61 @@ a {
 .modal__box .cont > div.active {
     display: block;
 }
+.modal__close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    background-color: #23243d;
+    padding: 0.5rem 0.5rem 0.4rem 0.5rem;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px -5px hsl(180deg 0% 10%);
+    cursor: pointer;
+    transition: all 0.3s;
+}
+.modal__close:hover {
+    background-color: #282936;
+}
+.modal__close svg {
+    color: #fff;
+}
+
+/* 모달 애니메이션 */
+.modal__cont.show {
+    animation: foldOut 1s ease forwards;
+}
+.modal__cont.show.hide{
+    animation: foldIn 0.3s 0.5s ease backwards;
+}
+.modal__cont.show .modal__box {
+    transform: scale(0);
+    animation: zoomOut 0.5s 1s ease forwards;
+}
+.modal__cont.show.hide .modal__box {
+    animation: zoomIn 0.5s ease forwards;
+}
+@keyframes foldOut {
+    0%   {transform: scaleX(0) scaleY(0.001);}
+    50%  {transform: scaleX(1) scaleY(0.001);}
+    100% {transform: scaleX(1) scaleY(1);}
+}
+@keyframes foldIn {
+    0%   {transform: scaleX(1) scaleY(1);}
+    50%  {transform: scaleX(1) scaleY(0.001);}
+    100% {transform: scaleX(0) scaleY(0.001);}
+}
+@keyframes zoomOut {
+    0%   {transform: scale(0)}
+    100% {transform: scale(1)}
+}
+@keyframes zoomIn {
+    0%   {transform: scale(1)}
+    100% {transform: scale(0)}
+}
+
+/* 요소를 안보이게 하는 방법  
+    1. display : none;      (애니메이션X, 영역X)
+    2. opacity : 0;         (애니메이션O, 영역O)
+    3. visivility : hidden; (애니메이션X, 영역X)
+    4. width: 0; height: 0; (애니메이션X, 영역X) : blind
+    5. transform: scale(0); (애니메이션O, 영역X)
+*/
