--- a/javascript/assets/css/slider.css
+++ b/javascript/assets/css/slider.css
@@ -78,6 +78,9 @@ a {
 }
 /* header */
 #header {
+    position: absolute;
+    left: 0;
+    top: 0;
     color: #fff;
     padding: 20px;
 }
@@ -101,6 +104,9 @@ a {
     text-align: center;
     line-height: 28px;
     font-size: 14px;
+}
+#header li.active a {
+    color: #3b3d63;
 }
 
 /* footer */
@@ -148,14 +154,11 @@ a {
 }
 
 .modal__box {
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    height: 600px;
-    background-color: #fff;
-    border-radius: 0.5rem;
-    background-color: #fff;
+    width: 70%;
+    height: 70vh;
+    border-radius: 0.6rem;
     box-shadow: 0 10px 20px -5px hsl(180deg 0% 10%);
+    transform: scale(0);
 }
 .modal__box .title {
     padding-inline: 1rem;
@@ -232,7 +235,7 @@ a {
 }
 .modal__box .cont {
     background-color: #282936;
-    height: 550px;
+    height: 100%;
     overflow-y: auto;
     box-sizing: border-box;
     border-bottom-left-radius: 0.5rem;
@@ -243,6 +246,7 @@ a {
 }
 .modal__box .cont > div.active {
     display: block;
+    height: 100%;
 }
 .modal__close {
     position: absolute;
@@ -263,18 +267,23 @@ a {
 }
 
 /* 모달 애니메이션 */
-.modal__cont.show {
+.modal__cont.show {    /* 전체 배경 */
     animation: foldOut 1s ease forwards;
 }
-.modal__cont.show.hide{
+.modal__cont.show.hide{     
     animation: foldIn 0.3s 0.5s ease backwards;
 }
-.modal__cont.show .modal__box {
-    transform: scale(0);
+.modal__cont.show .modal__box {    /* 스크립트 박스 */
     animation: zoomOut 0.5s 1s ease forwards;
 }
 .modal__cont.show.hide .modal__box {
     animation: zoomIn 0.5s ease forwards;
+}
+.modal__cont.show .modal__close {    /* 닫기 배경 */
+    animation: opacityOut 0.5s 1s ease forwards;
+}
+.modal__cont.show.hide .modal__close {
+    animation: opacityIn 0.5s ease backwards;
 }
 @keyframes foldOut {
     0%   {transform: scaleX(0) scaleY(0.001);}
@@ -286,6 +295,14 @@ a {
     50%  {transform: scaleX(1) scaleY(0.001);}
     100% {transform: scaleX(0) scaleY(0.001);}
 }
+@keyframes opacityOut {
+    0%   {transform: scale(0)}
+    100% {transform: scale(1)}
+}
+@keyframes opacityIn {
+    0%   {transform: scale(0)}
+    100% {transform: scale(1)}
+}
 @keyframes zoomOut {
     0%   {transform: scale(0)}
     100% {transform: scale(1)}
@@ -293,6 +310,33 @@ a {
 @keyframes zoomIn {
     0%   {transform: scale(1)}
     100% {transform: scale(0)}
+}
+
+@media (max-width: 1100px) {
+    .modal__box .title {
+        overflow: hidden;
+    }
+    .modal__box .title .dot {
+        display: none;
+    }
+    .modal__box .title .tabs {
+        margin-left: 0;
+    }
+    .modal__box .title .tabs > div .close {
+        display: none;
+    }
+}
+@media (max-width: 600px) {
+    #header {
+        width: 100%;
+        text-align: center;
+    }
+    #header h1 {
+        line-height: 1.4;
+    }
+    .modal__box {
+        width: 96%;
+    }
 }
 
 /* 요소를 안보이게 하는 방법  
