--- a/project/asset/css/Agree.css
+++ b/project/asset/css/Agree.css
@@ -29,18 +29,44 @@
 }
 .agree__inner .desc {
     background-color: #f5f5f5;
+    height: 110px;
+    margin-bottom: 20px;
+    position: relative;
+
+}
+.agree__inner .desc .desc_in {
     color: #757575;
+    width: 290px;
+    height: 80px;
     font-size: 16px;
     font-weight: 200;
-    height: 110px;
     overflow-y: scroll;
-    margin-bottom: 20px;
+    position: absolute;
+    left: 50%;
+    top: 48%;
+    transform: translate(-50%, -50%);
+    padding-right: 10px;
 }
 .agree__inner .desc ul {
-    padding: 17px 5px 17px 12px;
+
 }
 .agree__inner .desc li {
     font-size: 16px;
+}
+.agree__inner ::-webkit-scrollbar {
+    width: 2px;
+    height: 80px;
+    background-color: #f5f5f5;
+    border-radius: 50px;
+}
+.agree__inner ::-webkit-scrollbar-thumb {
+    height: 25%; /* 스크롤바의 길이 */
+    background: #757575; /* 스크롤바의 색상 */
+    border-radius: 5px;
+}
+.agree__inner ::-webkit-scrollbar-track {
+    background: #e9e9e9;
+    margin-right: 6px;
 }
 
 input[type="checkbox"] {
@@ -94,6 +120,7 @@ input[id="agreeCheckAll"]:checked + label::after {
 }
 .confirm_btn {
     width: 50%;
+    color: #c5c5c5;
 }
 .confirm_btn a {
     font-size: 16px;
