--- a/project/asset/css/idPassCommon.css
+++ b/project/asset/css/idPassCommon.css
@@ -24,6 +24,10 @@
     text-align: center;
     font-size: 24px;
     margin-bottom: 25px;
+    color: #505050;
+}
+.login__header h3 > a {
+    color: #505050;
 }
 .tab_menu {
     margin-bottom: 15px;
@@ -38,6 +42,9 @@
     cursor: pointer;
     margin-bottom: 20px;
 }
+.tab_menu > span > a {
+    color: #757575;
+}
 .tab_menu > span.id {
     margin-right: 5px;
 }
@@ -47,7 +54,10 @@
 .tab_menu > span.active {
     color: #6CC4B3;
 }
-.search_contents {
+.search_IDcontents {
+
+}
+.search_PASScontents {
 
 }
 .user_search {
