--- a/project/asset/css/login.css
+++ b/project/asset/css/login.css
@@ -9,7 +9,7 @@ body {
 .login__popup {
     margin: 0 auto;
     width: 380px;
-    height: 593px;
+    /* height: 593px; */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,7 +17,7 @@ body {
 }
 .login__inner {
     width: 380px;
-    height: 593px;
+    /* height: 593px; */
     background-color: #fff;
     border-radius: 10px;
     padding: 30px;
@@ -35,16 +35,16 @@ body {
     border-bottom: 0.5px dashed #6cc4b3;
 }
 .login__welcome > h3 {
-    color: #505050;
-    margin-bottom: 10px;
+    color: #757575;
+    margin-bottom: 39px;
     font-size: 16px;
     text-align: center;
 }
+.login__welcome figure {
+    margin-bottom: 38px;
+}
 .login__welcome figure > img {
-    width: 100%;
     width: 320px;
-    height: 170px;
-    margin-bottom: 30px;
 }
 .login__contents {
     position: relative;
@@ -52,13 +52,22 @@ body {
 }
 .login__contents .input__style {
     background-color: #f5f5f5;
-    font-size: 16px;
-    padding: 9px 0 10px 20px;
-    width: 320px;
+    padding: 10px 20px;
+    width: 100%;
     border: 0;
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: 10px;
+
+}
+.login__contents .input__style::placeholder {
+    font-size: 16px;
+    color: #757575;
+}
+.text_input div:first-child .input__style {
     margin-bottom: 10px;
+}
+.text_input div:last-child .input__style {
+    margin-bottom: 3px;
 }
 .login__contents .input__button {
     border-radius: 10px;
@@ -73,9 +82,6 @@ body {
 .login__contents .btn {
     justify-content: space-between;
 }
-/* .login__box {
-    margin-bottom: 20px;
-} */
 
 input[type="checkbox"] {
     display: none;
@@ -83,10 +89,11 @@ input[type="checkbox"] {
 input[type="checkbox"] + label {
     padding: 0 0 0 25px;
     font-size: 12px;
+    color: #757575;
     display: inline-block;
     position: relative;
     cursor: pointer;
-    margin-bottom: 7px;
+    margin-bottom: 16px;
 }
 input[type="checkbox"] + label::after {
     content:'✔';
@@ -97,34 +104,40 @@ input[type="checkbox"] + label::after {
     text-align: center;
     position: absolute;
     left: 0;
-    top:-2.5px;
+    top:-2px;
 }
 input[id="loginBox"]:checked + label::after {
     color: #6CC4B3;
 }
 .login__contents .btn {
-    margin-top: 19px;
     display: flex;
     justify-content: space-between;
+
 }
 .btn_login {
     width: 48%;
     text-align: center;
+    padding: 5px 0;
+    box-shadow: 0px 2px 8px 1px rgba(225, 225, 225, 0.25);
+    border-radius: 10px;
 }
-.btb_kakao {
+.btn_kakao {
     width: 48%;
     text-align: center;
+    padding: 5px 0;
+    box-shadow: 0px 2px 8px 1px rgba(225, 225, 225, 0.25);
+    border-radius: 10px;
 }
 .login__contents .btn button {
     font-size: 16px;
     color: #6cc4b3; 
-    background-color: #fff;
-    box-shadow: 0px 2px 8px 1px #e1e1e150;
+    background: #fff;
+    cursor: pointer;
 }
 .login__contents .btn a {
     font-size: 16px;
     color: #f2da00;
-    box-shadow: 0px 2px 8px 1px #e1e1e150;
+    background: #fff;
 }
 label {
     font-size: 12px;
@@ -136,23 +149,23 @@ input::placeholder {
 }
 .login__footer .footer_btn {
     border-top: 1px dashed #6cc4b3;
-}
-.login__footer:first-child .footer_btn {
-    border-left: 1px dashed #000;
+    display: flex;
+    justify-content: space-between;
 }
 .login__footer .footer_btn li {
     display: inline;
     font-size: 14px;
+    width: 50%;
+    text-align: center;
 }
 .login__footer .footer_btn li:first-child {
     border-right: 1px dashed #6cc4b3;
 }
 .login__footer .footer_btn a {
-    width: 48.5%;
     display: inline-block;
     border-radius: 5px;
     text-align: center;
     box-sizing: border-box;
-    padding: 10px 0px 0 0px;
+    padding: 10px 0 0 0;
     color: #757575;
 }
